[tool.poetry]
name = "payment-system"
version = "0.1.0"
description = "state machine payment system"
authors = ["roberto <robertointerface@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
aws-sam-cli = "^1.79.0"
stepfunctions = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
