[tool.poetry]
name = "arrange-delivery"
version = "0.1.0"
description = "arrange product delivery once is payed"
authors = ["roberto <robertointerface@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "arrange_delivery"}]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = {extras = ["aws"], version = "^4.3.3"}
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-env = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
