[tool.poetry]
name = "check-product-availability"
version = "0.1.0"
description = "check if product is available and can be bought"
authors = ["roberto <robertointerface@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
motor = "^3.1.2"
pymongo = "^4.3.3"
pydantic = "^1.10.7"
boto3 = "^1.26.109"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-env = "^0.8.1"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
