[tool.poetry]
name = "check-product-availability"
version = "0.1.0"
description = "check if product is available and can be bought"
authors = ["roberto <robertointerface@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "check_product_availability_lambda" }]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^3.1.2"
pymongo = {extras = ["aws"], version = "^4.3.3"}
pydantic = "^1.10.7"
boto3 = "^1.26.109"
pymongo-auth-aws = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-env = "^0.8.1"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
sphinx = "^6.1.3"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
