[tool.poetry]
name = "handle-failure"
version = "0.1.0"
description = "handle failure of payment state machine"
authors = ["roberto <robertointerface@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "handle_failure_lambda"}]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = {extras = ["aws"], version = "^4.3.3"}
boto3 = "^1.26.113"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
