[tool.poetry]
name = "pay-order"
version = "0.1.0"
description = "pay the order, charge the order to the user credit"
authors = ["roberto <robertointerface@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pay_order"}]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = {extras = ["aws"], version = "^4.3.3"}
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
pytest-env = "^0.8.1"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
